--- a/Elearn/Elearn.csproj
+++ b/Elearn/Elearn.csproj
@@ -28,4 +28,8 @@
     <PackageReference Include="Rotativa.AspNetCore" Version="1.2.0-beta" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Model\" />
+  </ItemGroup>
+
 </Project>
